--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 5000
-DB_URL = mongodb://localhost:27017/food_menu_db
+DB_URL = mongodb+srv://akashkokate1717:zhl9REH9TYoEU3HO@cluster0.b7wxjky.mongodb.net/food_menu_db
 MY_SECRETKEY=mySecretKey
