--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 5000
-DB_URL = mongodb+srv://akashkokate1717:hkjX9kZe7zxQ8EJe@cluster1.ktlxr6j.mongodb.net/
+DB_URL = mongodb+srv://akashkokate1717:hkjX9kZe7zxQ8EJe@cluster1.ktlxr6j.mongodb.net/food_menu_db
 MY_SECRETKEY=mySecretKey
